--- a/index.html
+++ b/index.html
@@ -8,6 +8,59 @@
     <title>leader-board</title>
 </head>
 <body>
-    <h1>top players</h1>
+    <!-- <header-start -->
+        <header>
+
+        </header>
+        <main>
+            <!-- top player and top blogs -->
+            <section class="container">
+                <div class="top-players">
+                    <h2 class="section-tittle">Top Players</h2>
+                    <div class="players">
+                        <div class="player">
+                            <img src="images/players/player-1.png" alt="">
+                            <h3 class="player-name">Top player-1</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-2.png" alt="">
+                            <h3 class="player-name">Top player-2</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-3.png" alt="">
+                            <h3 class="player-name">Top player-3</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-4.png" alt="">
+                            <h3 class="player-name">Top player-4</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-5.png" alt="">
+                            <h3 class="player-name">Top player-5</h3>
+                        </div>
+                        <div class="player">
+                            <img src="images/players/player-6.png" alt="">
+                            <h3 class="player-name">Top player-6</h3>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <!-- top blogs -->
+                <div class="top-blogs">
+                    <h2 class="section-tittle">Top Blogs</h2>
+                    <div class="blogs">
+                        <article class="blog-start">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-1.png" alt="">
+                                <div class="blogs-infro"></div>
+                                <h3 class="blogs-tittle">13 of My Favorit UI/UX Goodies</h3>
+                                <p class="blog-author">by <a href="">Danny Sapio</a></p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <!-- header-end -->
 </body>
 </html>
